# RoboticsInfrastructure

./: .env  .gitattributes  .gitignore  .gitmodules  README.md  build.sh  universes.sql
CustomRobots/: CMakeLists.txt  README.md  package.xml
CustomRobots/3d_reconstruction/launch/: kobuki_1_reconstruction3d.launch
CustomRobots/SelfDrivingModels/: README.md
CustomRobots/SelfDrivingModels/autonomous_vehicle_simple/: CMakeLists.txt  package.xml
CustomRobots/SelfDrivingModels/can_sim_tc/: CMakeLists.txt
CustomRobots/SelfDrivingModels/dataspeed_can/: README.md
CustomRobots/SelfDrivingModels/dbw_mkz_ros/: ROS_SETUP.md  dbw_mkz.rosinstall
CustomRobots/SelfDrivingModels/lusb/: package.xml
CustomRobots/Taxi_navigator/: README.md
CustomRobots/Taxi_navigator/worlds/: taxi_navigation_city_large.world
CustomRobots/Turtlebot2/: README.md
CustomRobots/Turtlebot2/Turtlebot2_physical/: Instructions Kobuki_base.md  README.md  links
CustomRobots/Turtlebot2/kobuki/: CMakeLists.txt  package.xml
CustomRobots/Turtlebot2/worlds/: CMakeLists.txt
CustomRobots/ackerman_cars/launch/: autocar.launch.py  autocar_autoparking.launch.py  f1.launch.py  lincoln.launch.py  taxi_holo.launch.py  taxi_holo_3laser_autoparking.launch.py
CustomRobots/ackerman_cars/worlds/: autoparking_autocar.world  autoparking_f1.world  autoparking_taxi.world  taxi.world
CustomRobots/ackermann_cars/launch/: bmw_warehouse_ackermann.launch.py  f1_autoparking.launch.py  montmelo_circuit_ackermann.launch.py  montmelo_circuit_ackermann_followingcam.launch.py  montreal_circuit_ackermann.launch.py  montreal_circuit_ackermann_followingcam.launch.py  nurburgring_circuit_ackermann.launch.py  nurburgring_circuit_ackermann_followingcam.launch.py  simple_circuit_ackermann.launch.py  simple_circuit_ackermann_followingcam.launch.py  taxi_holo_1laser_autoparking.launch.py
CustomRobots/ackermann_cars/worlds/: autocar.world  autoparking_taxi_3laser.world  bmw_warehouse_no_roof_ackermann.world  f1.world  lincoln.world  montmelo_line_ackermann.world  montmelo_line_ackermann_followingcam.world  montreal_line_ackermann.world  montreal_line_ackermann_followingcam.world  nurburgring_line_ackermann.world  nurburgring_line_ackermann_followingcam.world  simple_circuit.world  simple_circuit_ackermann.world  simple_circuit_ackermann_followingcam.world
CustomRobots/ackermann_logistic_robot/launch/: pallet_warehouse_with_ackermann_logistic_robot.launch.py
CustomRobots/amazon_hospital/: Readme.md
CustomRobots/amazon_hospital/hospital_world/: CMakeLists.txt  package.xml
CustomRobots/amazon_hospital/launch/: follow_person.launch.py  hospital_follow_person.world
CustomRobots/amazon_hospital/src/: person.cpp
CustomRobots/amazon_robot/amazon_robot_description/: CMakeLists.txt
CustomRobots/autoparkingRL/: README.md
CustomRobots/drone_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
CustomRobots/drone_assets/plugins/: wall1.cc  (+3 more)
CustomRobots/f1/: assets-setup.sh.in  package.xml
CustomRobots/hooks/: resource_paths.dsv.in  resource_paths.sh
CustomRobots/marble_husky_sensor_config_5/: metadata.pbtxt
CustomRobots/mountain_car/: thin_road.world
CustomRobots/turtlebot2/: Readme.md
CustomRobots/turtlebot3_waffle/: model.sdf
CustomRobots/urdf/: turtlebot3_waffle.urdf
amazon_robot/amazon_robot_controller/: CMakeLists.txt  package.xml
amazon_robot/amazon_robot_description/: CMakeLists.txt  package.xml
amazon_robot/amazon_robot_gazebo/: CMakeLists.txt  package.xml
amazon_robot/amazon_robot_msg/: CMakeLists.txt  package.xml
drone/: package.xml
drone/launch/: many_curves_drone.launch  montmelo_line_drone.launch  montreal_line_drone.launch  nurburgring_line_drone.launch  simple_circuit_drone.launch
drone/worlds/: many_curves_drone.world  montmelo_line_drone.world  montreal_line_drone.world  nurburgring_line_drone.world  simple_circuit_drone.world
f1/: CMakeLists.txt  README.md
f1/f1/: model.sdf
f1/f1_renault_laser/: model.sdf
f1/launch/: f1_1_circuit.launch  f1_1_simplecircuit.launch  many_curves.launch  many_curves_no_red_line_no_wall.launch  many_curves_no_wall.launch  montmelo_line.launch  montmelo_line_no_sun.launch  montmelo_no_red_line_no_wall.launch  montmelo_white_line.launch  montmelo_white_road.launch  montreal_line.launch  nurburgring_line.launch  nurburgring_no_red_line.launch  simple_circuit.launch  simple_circuit_black.launch  simple_circuit_no_wall.launch  simple_circuit_tunnel.launch  simple_circuit_white.launch  simple_circuit_white_line.launch  simple_circuit_white_road.launch  simple_circuitq_no_sun.launch
f1/montmelo_line/: model.config  model.sdf
f1/montreal_line/: model.config
f1/nurburgring_line/: model.sdf
f1/pista_simple/: model.sdf
f1/simple_circuit/: model.sdf
f1/worlds/: f1_1_simplecircuit.world  many_curves.world  many_curves_no_red_line.world  many_curves_no_red_line_no_wall.world  many_curves_no_wall.world  monaco_line.world  montmelo_line.world  montmelo_line_no_sun.world  montmelo_no_red_line.world  montmelo_white_line.world  montmelo_white_road_no_red_line.world  montreal_line.world  montreal_no_red_line.world  montreal_no_red_line_no_wall.world  nurburgring_line.world  nurburgring_line_no_wall.world  nurburgring_no_red_line.world  simple_circuit.world  simple_circuit_basic.world  simple_circuit_black.world  simple_circuit_f1multicameralaser.world  simple_circuit_no_red_line.world  simple_circuit_no_red_line_no_wall.world  simple_circuit_no_wall.world  simple_circuit_tunnel.world  simple_circuit_white.world  simple_circuit_white_line.world  simple_circuit_white_road.world
jderobot_drones/: as2.launch.py  package.xml  setup.cfg  setup.py
jderobot_drones/jderobot_drones/: drone_reset.py  drone_wrapper.py  image_sub.py
jderobot_drones/launch/: as2_default_classic_gazebo.launch.py  as2_default_gazebo_sim.launch.py  as2_default_ign_gazebo.launch.py
jderobot_drones/sim_config/: state_estimator_config_file.yaml  world.json  world_classic.json  world_swarm.json
lincoln-mkz-base/can_sim_tc/: nodelets.xml  package.xml
lincoln-mkz-base/lusb/: CMakeLists.txt
(+1462 files in other folders)
