<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- Updates According to Package format 3 https://www.ros.org/reps/rep-0149.html -->
<package format="3">

  <name>jderobot_assets</name>
  <version>1.0.0</version>
  <description>The jderobot_assets package</description>

  <maintainer email="utkarsh75477@gmail.com">Utkarsh A. Mishra</maintainer>
  <author email="utkarsh75477@gmail.com">Utkarsh A. Mishra</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  
</package>
