<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jderobot_drones</name>
  <version>0.0.0</version>
  <description>Jde Robot drones package to integrate Aerostack2 and pixhawk with Robotics Academy</description>
  <maintainer email="pawanw17@gmail.com">JdeRobot</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>as2_platform_ign_gazebo</exec_depend>
  <exec_depend>as2_state_estimator</exec_depend>
  <exec_depend>as2_motion_controller</exec_depend>
  <exec_depend>as2_behaviors_motion</exec_depend>
  <exec_depend>as2_ign_gazebo_assets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
