<?xml version="1.0"?>
<package format="3">
  <name>drone_assets</name>
  <version>1.4.2</version>
  <description>The drone_assets package</description>

  <maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
  <author email="pedroariasperez96@gmail.com">Pedro Arias</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />

  </export>
</package>
