<?xml version="1.0"?>
<package format="2">
  <name>amazon_robot_description</name>
  <version>2.0.0</version>
  <description>
    3D models of the Amazon Warehouse Robot for simulation and visualization
  </description>
  <license>Apache License 2.0</license>
  <author email="shreyas6gokhale@gmail.com">Shreyas</author>
  <maintainer email="shreyas6gokhale@gmail.com">Shreyas</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
