<?xml version="1.0"?>
<package format="2">
  <name>amazon_robot_description</name>
  <version>1.2.1</version>
  <description>
    3D models of the Amazon Warehouse Robot for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="shreyas6gokhale@gmail.com">Shreyas</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
