<?xml version="1.0"?>
<package format="2">
  <name>amazon_robot_gazebo</name>
  <version>2.0.0</version>
  <description>
    Gazebo simulation package for the Amazon Robot
  </description>
  <license>Apache 2.0</license>
  <author email="shreyas6gokhale@gmail.com">Shreyas</author>
  <maintainer email="shreyas6gokhale@gmail.com">Shreyas</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
