<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ir_kobuki</name>
  <version>0.0.0</version>
  <description>This package contains the packages for Kobuki</description>
  <maintainer email="jc.manzanares.serrano@gmail.com">lizo</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
