<?xml version="1.0"?>
<package format="2">
  <name>dataspeed_can_msgs</name>
  <version>1.0.4</version>
  <description>
    Controller Area Network (CAN) messages
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dataspeed_can</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dataspeed_can/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
